# iotedge_config_cli

./: .gitignore  Cargo.toml  LICENSE  README.md  iotedge_cli_config.yaml  iotedge_config_cli.yaml  nested_config.yaml  path.reg
.github/workflows/: bundle.sh  release.yaml  rust.yml
src/: aziot_config.rs  config.rs  hub_responses.rs  main.rs
src/docs/: device_readme.md  leaf_device_readme.md  root_readme.md
src/scripts/: apply.sh  consts.sh  headers.sh  install_ca_certs.sh  install_certs.sh  install_hub_auth_certs.sh  set_config.sh  set_hostname.sh  set_parent_hostname.sh  v3_ca_extensions.cnf
src/test_files/: cert_config.toml  cert_test.yaml  symmetric_key_config.toml
templates/: complex.yaml  device_config.toml  pi-setup.yaml  quickstart.yaml  quickstart_device_1.json  quickstart_device_2.json  quickstart_device_3.json  quickstart_with_deployment.yaml  sample_child.json  test1.json  test1.toml  test1.yaml
templates/authorization/: deploymentLowerLayer.json  deploymentTopLayer.json  iotedge_config.yaml
templates/leaf/: deploymentTopLayer.json  iotedge_config.yaml
templates/purdue/: deployment-L3.json  deployment-L4.json  deployment-L5.json  device_config.toml  iotedge_config.yaml  iotedge_config_cli.yaml
templates/tutorial/: deploymentLowerLayer.json  deploymentTopLayer.json  device_config.toml  iotedge_config.yaml  iotedge_config_cli.yaml
