[package]
name = "iotedge_config_cli"
version = "0.1.0"
authors = ["Lee Fitchett <lefitche@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"

chrono = "0.4.19"

tokio =  { version = "1.2.0", features = ["macros", "rt-multi-thread", "process", "io-util", "fs", "sync"] }
futures = "0.3.13"

structopt = { version = "0.3", default-features = false }

toml = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.59"
serde_yaml = "0.8"

id_tree = "1.7.0"
id_tree_layout = "2.0.1"

zip = "0.5"
walkdir = "2"

iotedge = { git = "https://github.com/lfitchett/iotedge.git", branch = "public_config" }
# iotedge = { git = "https://github.com/Azure/iotedge.git", branch = "master" }


